<resources>
    <string name="app_name">RUCafe</string>
    <string name="title_activity_donuts">DonutsActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="orderDonutsButton">Order Donuts</string>
    <string name="order_donuts">Order Donuts</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="view_order">View Order</string>
    <string name="all_orders">All Orders</string>
    <string name="add_donut">Add Donut</string>
    <string name="donutFlavorLabel">Flavor</string>
    <string name="donutQuantityLabel">Quantity</string>
    <string name="removeDonutButton">Remove</string>
    <string name="add_to_order_button">Add To Order</string>
    <string name="donutSubtotalLabel">Subtotal:</string>
    <string name="cream">Cream</string>
    <string name="milk">Milk</string>
    <string name="syrup">Syrup</string>
    <string name="caramel">Caramel</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="add_to_order">Add to Order</string>
    <string name="select_add_ins">Select add-ins:</string>
    <string name="grande">Grande</string>
    <string name="venti">Venti</string>
    <string name="select_a_size">Select a size:</string>
    <string name="shortSize">Short</string>
    <string name="tall">Tall</string>
    <string name="quantity">Quantity</string>
    <string name="add_coffee">Add Coffee</string>
    <string name="subtotal">Subtotal</string>
    <string name="orderTotalLabel">Total:</string>
    <string name="orderSubtotalLabel">Subtotal:</string>
    <string name="orderTaxLabel">Tax:</string>
    <string name="place_order">Place Order</string>
    <string name="zeroDollars">$0.00</string>
    <string name="viewOrderLabel">View Order:</string>
    <string name="cancelThisOrderButton">Cancel This Order</string>
    <string name="altTextMain">A stock image of a cafe</string>
    <string name="welcomeText">Welcome to RU Cafe!</string>

    <string-array name="donut_flavors_array">
        <item>Regular Glazed</item>
        <item>Chocolate Glazed</item>
        <item>Oreo</item>
        <item>Boston Creme</item>
        <item>Lemon</item>
        <item>Matcha</item>
        <item>Powdered Sugar</item>
        <item>Jelly Filled</item>
    </string-array>
</resources>